Second day commits

--- a/Readme.me
+++ b/Readme.me
@@ -29,3 +29,12 @@ https://learning.oreilly.com/videos/building-restful-apis/9781789614992/97817896
 ## Bson:
 go get gopkg.in/mgo.v2/bson
 t was created as part of the mgo MongoDB driver for Go, but is standalone and may be used on its own without the driver.
+
+
+Common route - /users
+
+Algorithm:
+ --> Recognize the /user route
+ --> Parse the URL and method to call a proper rootHandler
+ --> Retrieve or process data
+ --> Send the response
